--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,10 @@
       "dest": "/api/index.ts"
     },
     {
+      "src": "/docs(.*)",
+      "dest": "/api/index.ts"
+    },
+    {
       "src": "/(.*)",
       "dest": "/public/$1"
     }
